<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">mtgmtg1_s_application2</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_m">M</string>
    <string name="lbl_62">6</string>
    <string name="lbl_q">Q</string>
    <string name="lbl_s">S</string>
    <string name="lbl_t">T</string>
    <string name="lbl4">???</string>
    <string name="lbl5">????</string>
    <string name="lbl2">???</string>
    <string name="lbl_w">W</string>
    <string name="lbl3">????</string>
    <string name="lbl_home">Home</string>
    <string name="msg_92">9?? ?? ?????. ? ??? ? ??
??? ?? ??? ????? ????
??? ?? ?? ????.. ? ??? ?? ?
?????? ??? ??? ?? ??? ?...</string>
    <string name="lbl_302">30</string>
    <string name="lbl_app_navigation">App Navigation</string>
    <string name="lbl_262">26</string>
    <string name="lbl_142">14</string>
    <string name="lbl_3m">??? (3m)</string>
    <string name="lbl_52">5</string>
    <string name="lbl_my">My</string>
    <string name="msg_22">????? ?? ???? 20%??? ???? ?????</string>
    <string name="lbl_f">F</string>
    <string name="lbl_132">13</string>
    <string name="lbl_252">25</string>
    <string name="lbl_reservation">Reservation</string>
    <string name="lbl_42">4</string>
    <string name="msg20">? ????, ?? ??
?? ????. ? ? ???
? ???? ???^^</string>
    <string name="msg15">????? ????
???? ?? ????
?? ????, ??
??????. ?????</string>
    <string name="msg14">???? ??? ???
??? ? ?? ?? ??
????? ??? ???
?????!...</string>
    <string name="lbl_122">12</string>
    <string name="msg17">[??]
?? ?? ?? ???</string>
    <string name="msg16">??? ?? ??????? ?? ??
???? ???? ???, ?? ?? ???
??? ?? ??? ??? ???.
???? ???? ???? ?? ???...</string>
    <string name="lbl20">?? ??? ??? ???</string>
    <string name="msg11">???? ???? ??????!
????? ?? ???? 20%??? ???? ?????</string>
    <string name="lbl21">?? ??</string>
    <string name="msg10">????, ??? ??? ????</string>
    <string name="lbl22">?? ??</string>
    <string name="msg13">??? ?? ?? ???
?? ?? ???????
???? ? ?? ???
??? ????...</string>
    <string name="lbl23">??? ?? ???!</string>
    <string name="msg12">???? ???? ??????!
</string>
    <string name="msg_32">??? ? 3? ?? ??(??)</string>
    <string name="lbl24">????</string>
    <string name="lbl25">&#x1f63a; ??? ???</string>
    <string name="lbl26">&#x1f63a;</string>
    <string name="lbl27"> ??? ??</string>
    <string name="lbl28">?</string>
    <string name="msg19">??? ?????? ?? ?? ?? ??
??? ?? ? ?? ??? ? ?? ???
?? ?? ??? ??? ??? ????.
?????? ??, ?? ??? ?? ??...</string>
    <string name="lbl29">&#x1f436; ??? ???</string>
    <string name="msg18">[??]
?? ??? ?????!!</string>
    <string name="lbl_242">24</string>
    <string name="lbl_10_14">10. 14</string>
    <string name="lbl_2022_10_14">2022 . 10 . 14</string>
    <string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
    <string name="lbl_32">3</string>
    <string name="lbl8">?????
??? ????.</string>
    <string name="lbl_112">11</string>
    <string name="lbl9">?? ??? ??  &gt;</string>
    <string name="lbl_232">23</string>
    <string name="lbl6">?? ???? ??</string>
    <string name="lbl7">&#x1f60d;</string>
    <string name="lbl10">???? ?? ??</string>
    <string name="lbl11">??</string>
    <string name="lbl12">?????
????.</string>
    <string name="lbl13">??</string>
    <string name="lbl_192">19</string>
    <string name="lbl14">????</string>
    <string name="lbl15">????</string>
    <string name="lbl16">????? ??? ???.</string>
    <string name="lbl17">????</string>
    <string name="lbl18">?? ????</string>
    <string name="lbl19">?? ???
??? ???.</string>
    <string name="msg">?????,
?? ??????.</string>
    <string name="lbl_23">2</string>
    <string name="lbl_24">???? ?? ?? 2??</string>
    <string name="lbl_22">???? (2)</string>
    <string name="lbl_jiny_hoca_app">jiny@hoca.app</string>
    <string name="lbl_10_21">10. 21</string>
    <string name="lbl_222">22</string>
    <string name="lbl40">?? ??</string>
    <string name="lbl41">??? ???</string>
    <string name="lbl_102">10</string>
    <string name="lbl42">?? ??? ???</string>
    <string name="lbl43">??? ???</string>
    <string name="lbl44">????</string>
    <string name="lbl45">????</string>
    <string name="lbl_chat">Chat</string>
    <string name="lbl_4_5">4.5</string>
    <string name="lbl46">?? ??</string>
    <string name="lbl_jointwo">joinTwo</string>
    <string name="lbl47">??</string>
    <string name="lbl48">??? ???</string>
    <string name="lbl_10_am">10 AM</string>
    <string name="lbl_182">18</string>
    <string name="lbl49">?? ???</string>
    <string name="msg_52">????? ??? ????50?
19 ??????</string>
    <string name="lbl_92">9</string>
    <string name="lbl_qna">?? QnA</string>
    <string name="lbl_see_all">See All</string>
    <string name="lbl_12">???? 1?</string>
    <string name="lbl_2_pm">2 PM</string>
    <string name="lbl_hometwo">HomeTwo</string>
    <string name="lbl30">?? ? ??</string>
    <string name="lbl_212">21</string>
    <string name="lbl31">??? ??</string>
    <string name="lbl32">???</string>
    <string name="lbl33">???
??</string>
    <string name="lbl">?? ??? ???</string>
    <string name="lbl34">??
???</string>
    <string name="lbl_2022_10">2022. 10</string>
    <string name="lbl35">???
??</string>
    <string name="lbl36">??
??</string>
    <string name="lbl37">??
???</string>
    <string name="lbl_172">17</string>
    <string name="lbl38">??
??</string>
    <string name="lbl_292">29</string>
    <string name="lbl39">??? ??</string>
    <string name="lbl_82">8</string>
    <string name="lbl_6m">????(6m)</string>
    <string name="lbl_0">0</string>
    <string name="lbl_1">1</string>
    <string name="lbl_join">join</string>
    <string name="lbl_check">check</string>
    <string name="lbl_reservationtwo">ReservationTwo</string>
    <string name="lbl60">???</string>
    <string name="lbl61">??? ???</string>
    <string name="lbl_202">20</string>
    <string name="lbl62">???</string>
    <string name="lbl63">???? ??</string>
    <string name="lbl64">??</string>
    <string name="lbl65">???</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_jointhree">joinThree</string>
    <string name="lbl_282">28</string>
    <string name="lbl_162">16</string>
    <string name="msg4">???? ?? ?? ??(??)</string>
    <string name="msg3">?? ??? ???? ??(??)</string>
    <string name="msg2">?? ?? ? ?? ?
?? ???? ??? ???!</string>
    <string name="lbl_joinfour">joinFour</string>
    <string name="msg8">(???, ? / ??, ???? ?)</string>
    <string name="lbl_5_0">5.0</string>
    <string name="msg7">??? ?? ?? ??(??)</string>
    <string name="msg6">? ?? ???? ??(??)</string>
    <string name="lbl_72">7</string>
    <string name="msg5">????? ???? ?? ??(??)</string>
    <string name="msg9">?? ???? ?? ?? ?? ??? ?????. 
???? ????? ??? ???</string>
    <string name="lbl50">??? ??</string>
    <string name="lbl_312">31</string>
    <string name="lbl51">??? ????</string>
    <string name="lbl52">??? ?? ??</string>
    <string name="lbl53">??? ???</string>
    <string name="lbl54">??</string>
    <string name="lbl55">??? ???? ? ????</string>
    <string name="lbl56">?????!</string>
    <string name="lbl57">??</string>
    <string name="lbl58">????</string>
    <string name="lbl59">???</string>
    <string name="lbl_152">15</string>
    <string name="msg_82">[???]
8?? ??? ?????</string>
    <string name="lbl_272">27</string>
    <string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
    <string name="msg_camera_storage_permission">This Application need permission\n1.Camera permission to capture the image.\n2.Storage Access permission to save the captured image.</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
</resources>
