<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listnameRowModel" type="com.mtgmtgsapplication.app.modules.hometwo.data.model.ListnameRowModel"/>
    </data>
    <LinearLayout android:gravity="end"
        android:id="@+id/linearColumnthirteen"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical" style="@style/groupStylewhite_1">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowname"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <ImageView android:id="@+id/imageImageOne"
                android:layout_height="@dimen/_44pxh"
                android:layout_width="@dimen/_45pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_image_gray_402"
                tools:ignore="ContentDescription" tools:src="@drawable/img_image_gray_402"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumnname"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_6pxv"
                android:layout_marginStart="@dimen/_5pxh"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_weight="0.65" android:layout_width="0dp" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtName"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text="@{listnameRowModel.txtName}"
                    style="@style/txtNotoSansKRnotosanskrmedium14_3" tools:text="@string/lbl_6m"/>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearLocation"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_1pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageLocation"
                        android:layout_height="@dimen/_11pxh"
                        android:layout_width="@dimen/_9pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_location"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_location"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtNameOne"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginStart="@dimen/_5pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_weight="0.87"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="@dimen/_1pxh"
                        android:singleLine="true"
                        android:text="@{listnameRowModel.txtNameOne}"
                        style="@style/txtNotoSansKRnotosanskrregular10" tools:text="@string/lbl41"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtThirteen"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_8pxh"
            android:text="@{listnameRowModel.txtThirteen}"
            style="@style/txtNotoSansKRnotosanskrregular12" tools:text="@string/msg13"/>
        <LinearLayout android:gravity="end"
            android:id="@+id/linearRowfifty"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_13pxh"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_marginTop="@dimen/_26pxv"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <TextView android:ellipsize="end" android:id="@+id/txtFifty"
                android:layout_height="wrap_content"
                android:layout_weight="0.6" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@{listnameRowModel.txtFifty}"
                style="@style/txtNotoSansKRnotosanskrbold20" tools:text="@string/lbl_5_0"/>
            <ImageView android:id="@+id/imageLocationOne"
                android:layout_height="@dimen/_18pxh"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="@dimen/_20pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_location_18x20"
                tools:ignore="ContentDescription" tools:src="@drawable/img_location_18x20"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btn"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_16pxv"
            android:layout_marginBottom="@dimen/_12pxv"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_width="@dimen/_92pxh"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:paddingBottom="@dimen/_4pxv"
            android:paddingEnd="@dimen/_14pxh"
            android:paddingStart="@dimen/_14pxh"
            android:paddingTop="@dimen/_4pxv" android:singleLine="true"
            android:text="@string/lbl42" android:textAllCaps="false"
            style="@style/btnSolidRounded_3" tools:text="@string/lbl42"/>
    </LinearLayout>
</layout>
