<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listrectangletwentytwoRowModel" type="com.mtgmtgsapplication.app.modules.hometwo.data.model.ListrectangletwentytwoRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRowrectangletwentytwo"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal" style="@style/groupStylewhite_3">
        <View
            android:background="@drawable/rectangle_bg_deep_orange_300_radius_tl_20_bl_20"
            android:id="@+id/viewRectangleTwentyTwo"
            android:layout_height="@dimen/_190pxh" android:layout_width="@dimen/_12pxh"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumneight"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12pxv"
            android:layout_marginEnd="@dimen/_13pxh"
            android:layout_marginStart="@dimen/_26pxh"
            android:layout_marginTop="@dimen/_11pxv"
            android:layout_weight="0.94" android:layout_width="0dp" android:orientation="vertical">
            <LinearLayout android:id="@+id/linearRoweight"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:id="@+id/txtEight"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_27pxv"
                    android:layout_weight="0.82"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_5pxh"
                    android:text="@{listrectangletwentytwoRowModel.txtEight}"
                    style="@style/txtNotoSansKRnotosanskrmedium15" tools:text="@string/msg_82"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtGroupFortyFive"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_29pxv"
                    android:layout_marginStart="@dimen/_4pxh"
                    android:layout_weight="0.18"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:paddingBottom="@dimen/_6pxv"
                    android:paddingEnd="@dimen/_9pxh"
                    android:paddingStart="@dimen/_9pxh"
                    android:paddingTop="@dimen/_7pxv"
                    android:singleLine="true"
                    android:text="@{listrectangletwentytwoRowModel.txtGroupFortyFive}"
                    style="@style/txtRoundedOutline" tools:text="@string/lbl_q"/>
            </LinearLayout>
            <TextView android:id="@+id/txtDescription"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_5pxh"
                android:text="@{listrectangletwentytwoRowModel.txtDescription}"
                style="@style/txtNotoSansKRnotosanskrregular10_1" tools:text="@string/msg16"/>
            <LinearLayout android:id="@+id/linearRowsixteen"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_2pxh"
                android:layout_marginStart="@dimen/_5pxh"
                android:layout_marginTop="@dimen/_27pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <LinearLayout android:id="@+id/linearRoweye"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.53"
                    android:layout_width="0dp" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageEye"
                        android:layout_height="@dimen/_8pxh"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_width="@dimen/_10pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_eye"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_eye"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtZero"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_3pxh"
                        android:layout_weight="0.22"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="@dimen/_1pxh"
                        android:singleLine="true"
                        android:text="@{listrectangletwentytwoRowModel.txtZero}"
                        style="@style/txtNotoSansKRnotosanskrmedium11" tools:text="@string/lbl_0"/>
                    <ImageView android:id="@+id/imageMenu"
                        android:layout_height="@dimen/_8pxh"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginStart="@dimen/_8pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_width="@dimen/_8pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_menu"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_menu"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtZeroOne"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_2pxh"
                        android:layout_weight="0.22"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="@dimen/_1pxh"
                        android:singleLine="true"
                        android:text="@{listrectangletwentytwoRowModel.txtZeroOne}"
                        style="@style/txtNotoSansKRnotosanskrmedium11" tools:text="@string/lbl_0"/>
                </LinearLayout>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSixteen"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_97pxh"
                    android:layout_weight="0.47"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text="@{listrectangletwentytwoRowModel.txtSixteen}"
                    style="@style/txtNotoSansKRnotosanskrmedium11" tools:text="@string/lbl44"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
